--- a/app/src/main/res/layout/flag_iteam.xml
+++ b/app/src/main/res/layout/flag_iteam.xml
@@ -7,6 +7,7 @@
     android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_country_iteam"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="20dp"
