--- a/app/src/main/res/layout/activity_meal_search.xml
+++ b/app/src/main/res/layout/activity_meal_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#212121"
-    tools:context=".Search.Category.View.CategorySearch">
+    tools:context=".Search.MealSearch.MealSearchActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView3"
@@ -72,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/Catigories"
+                android:text="@string/meals"
                 android:textColor="#F99417"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -99,5 +99,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_navigation" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
