--- a/app/src/main/res/layout/ingrediant_iteam.xml
+++ b/app/src/main/res/layout/ingrediant_iteam.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00FFFFFF">
+    android:background="#00FFFFFF"
+    android:paddingBottom="10dp">
 
     <ImageView
         android:id="@+id/iv_ingrediant"
@@ -41,4 +42,5 @@
         app:layout_constraintHorizontal_bias="0.715"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_ingrediant" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
