--- a/app/src/main/res/layout/favorite_rv.xml
+++ b/app/src/main/res/layout/favorite_rv.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_meal_plan_iteam"
     android:layout_width="180dp"
     android:layout_height="250dp"
     android:layout_marginLeft="10dp"
@@ -34,9 +35,9 @@
             android:id="@+id/tv_fav_meal_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:gravity="center"
             android:text="TextView"
-            android:textColor="#f9c406"
+            android:textColor="#A4FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,13 +50,12 @@
             android:id="@+id/delete_btn_fav"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginStart="120dp"
             android:background="@drawable/delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_fav_meal_name"
-            app:layout_constraintVertical_bias="0.572" />
+            app:layout_constraintVertical_bias="0.78" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/meal_img_fav"
@@ -68,11 +68,10 @@
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/dp_fav"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:background="#F99417"
+            android:background="@drawable/round_btutton"
             android:completionHint="select a day"
             android:completionThreshold="0"
             android:defaultFocusHighlightEnabled="true"
@@ -86,9 +85,10 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/fav_button"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_fav_meal_name"
+            app:layout_constraintVertical_bias="0.015"
             tools:ignore="Deprecated" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
