firebase synchronizing and profile activity

--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -3,7 +3,7 @@
 
     <item
         android:state_selected="true"
-        android:color="#fe7e34"/>
+        android:color="#F99417"/>
     <item
         android:state_selected="false"
         android:color="@color/white"/>
