--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:id="@+id/viewpager_home"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="210dp"
+        android:layout_marginTop="111dp"
+        android:layout_marginBottom="180dp"
         android:paddingStart="80dp"
         android:paddingEnd="80dp"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
@@ -75,7 +75,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
 
-        android:layout_marginTop="20dp"
         android:text="Ready to plan your meals"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -89,14 +88,14 @@
         android:id="@+id/tv_inspiration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="250dp"
         android:text="Daily Inspiration"
-        android:textColor="#fe7e34"
+        android:textColor="#F99417"
 
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -115,7 +114,7 @@
         android:id="@+id/oops_tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="60dp"
         android:text="@string/oops"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -158,7 +157,7 @@
         android:id="@+id/load"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="200dp"
         android:elevation="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,36 +172,36 @@
         android:layout_height="70dp"
         app:layout_constraintBottom_toTopOf="@+id/viewpager_home"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.091"
+        app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.228"
+        app:layout_constraintVertical_bias="0.1"
         app:srcCompat="@drawable/ic_profile_img" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="250dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/recommended"
-        android:textColor="#fe7e34"
+        android:textColor="#F99417"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.091"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewpager_home" />
+        app:layout_constraintTop_toTopOf="@+id/noInternet_tv_main" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager_recommended"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="37dp"
-        android:paddingStart="80dp"
-        android:paddingEnd="80dp"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        android:layout_marginTop="16dp"
+        android:paddingStart="90dp"
+        android:paddingEnd="90dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewpager_home">
 
