--- a/app/src/main/res/layout/recommended_home_rv.xml
+++ b/app/src/main/res/layout/recommended_home_rv.xml
@@ -2,10 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="250dp"
-    android:layout_height="200dp"
+    android:id="@+id/slide_card"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     app:cardBackgroundColor="#272727"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="50dp"
+    app:cardElevation="20dp"
+    app:cardPreventCornerOverlap="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,18 +35,20 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_favourit"
-            app:layout_constraintHorizontal_bias="0.54"
+            app:layout_constraintHorizontal_bias="0.564"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_meal_pic"
-            app:layout_constraintVertical_bias="0.4"
+            app:layout_constraintVertical_bias="0.486"
             tools:ignore="Deprecated" />
 
         <ImageView
             android:id="@+id/iv_meal_pic"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="90dp"
 
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/burger" />
@@ -52,11 +57,22 @@
             android:id="@+id/btn_favourit"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:background="@drawable/fav"
+            app:layout_constraintBottom_toBottomOf="@+id/recomended_dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.927"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recomended_dp" />
+
+        <TextView
+            android:id="@+id/rec_meal_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="#F99417"
+            app:layout_constraintBottom_toTopOf="@+id/recomended_dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_meal_pic" />
 
