--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -161,7 +161,7 @@
                 tools:listitem="@layout/favorite_rv" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cv_thursday"
+                android:id="@+id/cv_wednesday"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -198,13 +198,13 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_tharsday"
+                android:id="@+id/rv_wednesday"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/favorite_rv" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cv_wednesday"
+                android:id="@+id/cv_thursday"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -242,7 +242,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_wednesday"
+                android:id="@+id/rv_tharsday"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/favorite_rv" />
@@ -343,8 +343,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/theme"
         app:itemIconTint="@drawable/selector"
