--- a/app/src/main/res/layout/activity_meal_data.xml
+++ b/app/src/main/res/layout/activity_meal_data.xml
@@ -100,7 +100,48 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:srcCompat="@tools:sample/avatars" />
+
             </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/dp_fav"
+                    android:layout_width="120dp"
+                    android:layout_height="30dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1.7"
+                    android:background="#F99417"
+                    android:completionHint="select a day"
+                    android:completionThreshold="0"
+                    android:defaultFocusHighlightEnabled="true"
+                    android:editable="false"
+                    android:hint="@string/drop_hint"
+                    android:paddingStart="12dp"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:textAlignment="center"
+                    android:textColorHint="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="Deprecated" />
+
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="0.25"
+                    android:background="@drawable/fav" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_meal_name"
@@ -224,7 +265,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="7dp"
         android:background="@drawable/round_btutton"
-        android:text="@string/addFavourit"
+        android:text="@string/addTogoogleCalendar"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
