--- a/app/src/main/res/layout/home_rv.xml
+++ b/app/src/main/res/layout/home_rv.xml
@@ -31,7 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
-                android:textColor="#A4FFFFFF"
+                android:textColor="#F99417"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
