--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
             </androidx.viewpager2.widget.ViewPager2>
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/tv_recomended"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -179,7 +179,6 @@
         android:id="@+id/load"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_marginBottom="200dp"
         android:elevation="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
