--- a/app/src/main/res/layout/activity_meal_data.xml
+++ b/app/src/main/res/layout/activity_meal_data.xml
@@ -108,8 +108,9 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+
                 <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                    android:id="@+id/dp_fav"
+                    android:id="@+id/dp_plan"
                     android:layout_width="120dp"
                     android:layout_height="30dp"
                     android:layout_marginHorizontal="20dp"
@@ -132,9 +133,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="Deprecated" />
 
-
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/btn_add_to_fav_de"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginVertical="10dp"
