--- a/app/src/main/res/layout/home_rv.xml
+++ b/app/src/main/res/layout/home_rv.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/meal_name" />
 
             <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/dp_fav"
+                android:id="@+id/dp_plan"
                 android:layout_width="120dp"
                 android:layout_height="30dp"
                 android:background="#F99417"
